# crystacean

./: .gitignore  README.md  basis_vectors.py  classes.py  cli.py  cull_results.py  findthosepoints.py  from_basis_vectors.py  next_layer.sh  pyo_test.py  pyproject.toml  requirements.txt  shell.nix  symmetry_test.py
T1s1/: new.xyz  test2.in
cp2k_template/: testlarge.in
cp2k_template/TiO2/: run_cp2k.sh  testlarge.in
cp2k_template/final/: testlarge.in
examples/: python_example.py  python_example_more.py
lattice_solver/: .gitignore  Cargo.toml
lattice_solver/benches/: benchmarks.rs  dd_var_time.rs  divan_bench.rs  full_run.rs
lattice_solver/examples/: 3d.rs  close_tree.rs  dd_variance.rs  from_json.rs  macro_test.rs  parallel.rs  readme_example.rs  solve.rs
lattice_solver/src/: bit_representation.rs  close_vector_tree.rs  crown.rs  inserters.rs  lib.rs  points.rs  site_filter.rs  test_points.rs
lattice_solver/src/bit_representation/: bit_rep_impl.rs
lattice_solver_python/: Cargo.toml  output.json  pyproject.toml
lattice_solver_python/src/: lib.rs
test_lattices/: T04.json  T08.json  T09.json  T12.json  T12alt.json  T16.json  T20.json  T24.json  T25.json  T30.json  T36.json  Tbase.json  Ttinybase.json
