[package]
name = "lattice_solver"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.5.3", features = ["rayon"] }
fixedbitset = "0.5.7"
itertools = "0.13"
json = "0.12.4"
kdam = { version = "0.5.1", features = ["template", "spinner", "gradient", "rayon"] }
kiddo = "4.0.0"
rayon = "1.10.0"
scc = "2.1.1"
termion = "4.0.0"

[dev-dependencies]
criterion = "0.5.1"
divan = "0.1.14"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "full_run"
harness = false

[[bench]]
name = "divan_bench"
harness = false

[[example]]
name = "solve"

[[example]]
name = "parallel"

[profile.bench]
debug = true 

[profile.release]
debug = true
