[package]
name = "lattice_solver_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lattice_solver_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
lattice_solver = { path = "../lattice_solver" }
